# bochka-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  example.env  main.py  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: code-quality.yml  tests.yml
.github/workflows/actions/setup/: action.yml
deploy/: Dockerfile.prod  entrypoint.sh
src/: config.py
tests/: test_ping.py
